--- a/site/website/package.json
+++ b/site/website/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "swiper": "^11.1.5"
   },
