--- a/site/website/package.json
+++ b/site/website/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "swiper": "^11.1.5"
