--- a/site/website/package.json
+++ b/site/website/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.11",
+    "@tinymce/tinymce-react": "^5.1.1",
     "dotenv": "^16.4.5",
+    "fs-extra": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
