--- a/site/website/package.json
+++ b/site/website/package.json
@@ -18,9 +18,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-image-gallery": "^1.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
+    "sass": "^1.77.8",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
