--- a/site/website/package.json
+++ b/site/website/package.json
@@ -14,11 +14,13 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
+    "react-leaflet": "^4.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
