--- a/site/website/package.json
+++ b/site/website/package.json
@@ -13,8 +13,10 @@
     "@tanstack/react-query": "^5.51.11",
     "@tinymce/tinymce-react": "^5.1.1",
     "dotenv": "^16.4.5",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^11.2.0",
     "leaflet": "^1.9.4",
+    "leaflet-easybutton": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
