--- a/site/website/.env
+++ b/site/website/.env
@@ -1,4 +1,6 @@
-VITE_API_URL='http://127.0.0.1:8000/api/v1'
-VITE_API_DOMAIN='http://127.0.0.1:8000'
-VITE_TINY_KEY='lzcmtsnr38jit5d4ycmg5b0klznp0itxhxar0lj0rtlov30f'
-VITE_GEOCODING_KEY='1616c2521654417eb8908ef6687dcfa0'
+VITE_API_URL=http://127.0.0.1:8000/api/v1
+VITE_API_DOMAIN=http://127.0.0.1:8000
+VITE_TINY_KEY=lzcmtsnr38jit5d4ycmg5b0klznp0itxhxar0lj0rtlov30f
+VITE_GEOCODING_KEY=1616c2521654417eb8908ef6687dcfa0
+VITE_APP_FB_APP_ID=
+VITE_APP_GG_APP_ID=
