--- a/site/website/package.json
+++ b/site/website/package.json
@@ -26,6 +26,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
+    "reactjs-social-login": "^2.6.3",
     "sass": "^1.77.8",
     "swiper": "^11.1.5"
   },
